--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home {
+  margin-top: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.quantity {
+  display: flex;
+  flex-direction: row;
+  margin-top: 4%;
+  width: 8rem;
+  border: 1px solid orange;
+}
+.quantity button {
+  background-color: orange;
+  width: 4.5rem;
+  height: 3rem;
+}
+.quantity .input {
+  height: 3rem;
+  width: 100%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  position: relative;
+  top: 0.1rem;
+  font-size: 2rem;
 }
